--- a/assets/css/otherpage.css
+++ b/assets/css/otherpage.css
@@ -264,7 +264,7 @@ html {
     font-size: 30px;
     bottom: 2%;
     right: 2%;
-    z-index: 1;
+    z-index: 3;
 }
 
 #chatbox {
@@ -273,7 +273,7 @@ html {
     font-size: 60px;
     bottom: 10%;
     right: 1%;
-    z-index: 1;
+    z-index: 3;
     display: flex;
     align-items: center;
 }
